- #777: -lang qb: Suffixed identifiers on the left-hand side of assignments were resolved by prefering global variables instead of local ones. Now local ones take priority, as in other places (e.g. expressions) and as in QB.
- #783: C backend: Run-time float-to-uint64 conversions truncated the value to int64
- #745: PRINT comma-padding could wrap into the next line too early (if the padding would move the caret beyond column width-FB_TAB_WIDTH). This happened in both console and graphics modes.


Version 1.03.0

[changed]
- -print now only prints the information, and then stops the compiler
- non-standalone builds: -target <gcctarget> no longer searches libs in lib/freebasic/<gcctarget>, but rather in the normal lib/freebasic/<fbtarget> directory. I.e. the directory layout for native or cross compiling is the same, making packaging and distribution easier.

[added]
- IUP binding updated to 3.13
- #742: fbc can now use lib64/freebasic/... instead of lib/freebasic/ if built with ENABLE_LIB64=1
- -print fblibdir option
- All the recently updated bindings now have copyright/license information
- New libbzip2 binding (64bit-capable)
- New libcaca binding (64bit-capable), libcaca-0.99.beta19
- New BASS 2.4 & BASSMOD 2.0 bindings (64bit-capable)
- New OpenAL (openal-soft-1.16.0) and freealut (1.1.0) bindings (64bit-capable)
- New ASpell 0.60.6.1 binding (64bit-capable)
- New libbfd binding (64bit-capable), supporting all binutils versions from 2.16 to 2.25
- New CanvasDraw 5.8.1 binding (64bit-capable)
- Updated CGUI binding to 2.0.4 (from CGUI project's CVS)
- Redundant constant declarations (CONST A = 1 : CONST A = 1) are now allowed, just like redundant #defines
- logic operation optimization: x <> 0 => x if x is a comparison operation already, and <comparison> = 0 => <inverted-comparison>, and NOT <comparison> => <inverted-comparison>